--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,18 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 30th</h1>
-            <h3>Week 22 Day 5 (Intermediate HTML)</h3>
+            <h1>GDWD 105 - Agenda for February 2nd</h1>
+            <h3>Week 23 Day 1 (Intro to CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>
-                            <li>What is one of your favorite Pixar movies?</li>
-                        </li>
+                        <li>What is your favorite color?</li>
                     </ul>
-                    <div class="img-container more-space dark-blue">
+                     <div class="img-container">
                         <img 
-                            src="images/inside-out.jpg"
-                            alt="feelings"
+                            src="images/painter-fox.jpg"
+                            alt="painter fox"
                         >
                     </div>
                 </div>
@@ -32,14 +30,18 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck (Complete)</li>
+                            <li><span class="type">Quiz</span>Intermediate HTML</li>
+                            <li><span class="type">Survey</span>Intermediate HTML Wrap Up</li>
+                            <li><span class="type">Showcase</span>Your Favorite HTML Assignments!</li>
+
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck (Complete) [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Intro to CSS and CSS Properties</li>
+                            <li><span class="type">Demo</span>Spans, Color, and Background Color in CSS</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -51,14 +53,16 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Tips</li>
-                            <li><span class="type">Project</span>HTML Potluck (Complete) [cont.]</li>
+                            <li><span class="type">Demo</span>Spans, Color, and Background Color in CSS [cont.]</li>
+                            <li><span class="type">Extra Credit</span>Technicolor Lorem Ipsum</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck (Complete)</li>
+                            <li><span class="type">Quiz</span>Intermediate HTML</li>
+                            <li><span class="type">Survey</span>Intermediate HTML Wrap Up</li>
+                            <li><span class="type">Extra Credit</span>Technicolor Lorem Ipsum</li>
                         </ul>
                     </div>
                 </div>
