--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,18 +8,18 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 2nd</h1>
-            <h3>Week 23 Day 1 (Intro to CSS)</h3>
+            <h1>GDWD 105 - Agenda for February 3rd</h1>
+            <h3>Week 23 Day 2 (Intro to CSS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite color?</li>
+                        <li>What is one of your favorite DreamWorks movies?</li>
                     </ul>
-                     <div class="img-container">
+                    <div class="img-container">
                         <img 
-                            src="images/painter-fox.jpg"
-                            alt="painter fox"
+                            src="images/httyd.jpg"
+                            alt="how to train your dragon"
                         >
                     </div>
                 </div>
@@ -30,9 +30,8 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Intermediate HTML</li>
-                            <li><span class="type">Survey</span>Intermediate HTML Wrap Up</li>
-                            <li><span class="type">Showcase</span>Your Favorite HTML Assignments!</li>
+                            <li><span class="type">Kahoot</span>Document Flow and HTML Elements</li>
+                            <li><span class="type">PowerPoint</span>Clean Code - Part 3</li>
 
                         </ul>
                     </div>
@@ -40,8 +39,7 @@
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Intro to CSS and CSS Properties</li>
-                            <li><span class="type">Demo</span>Spans, Color, and Background Color in CSS</li>
+                            <li><span class="type">Demo</span>Text-related CSS Properties</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -53,16 +51,13 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Spans, Color, and Background Color in CSS [cont.]</li>
-                            <li><span class="type">Extra Credit</span>Technicolor Lorem Ipsum</li>
+                            <li><span class="type">Exercise</span>The 10 Trials of Basic CSS</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Quiz</span>Intermediate HTML</li>
-                            <li><span class="type">Survey</span>Intermediate HTML Wrap Up</li>
-                            <li><span class="type">Extra Credit</span>Technicolor Lorem Ipsum</li>
+                            <li><span class="type">Exercise</span>The 10 Trials of Basic CSS</li>
                         </ul>
                     </div>
                 </div>
